--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ nav a:hover {
         width: 100%;
         padding: 10px;
     }
+    nav {
+        flex-direction: column;
+        align-items: start;
+    }
     nav a {
         padding: 8px 15px;
         margin: 4px;
