--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     overflow-x: hidden;
 }
 .container {
-    width: 60%;
+    width: 800px;
     margin: 0 auto;
     padding: 20px;
 }
@@ -47,12 +47,10 @@ nav a:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .footer {
-    margin-top: 20px;
     text-align: center;
     padding: 10px;
     background: #333;
     color: #fff;
-    border-radius: 5px;
 }
 
 
@@ -61,14 +59,14 @@ nav a:hover {
         border-radius: 0px;
     }
     .container {
-        width: 100%;
         padding: 10px;
         box-sizing: border-box;
+        display: contents;
     }
-    nav {
+    /* nav {
         flex-direction: column;
-        align-items: start;
-    }
+        /* align-items: start;
+    } */
     nav a {
         padding: 8px 15px;
         margin: 4px;
