--- a/style.css
+++ b/style.css
@@ -6,23 +6,31 @@ body {
     color: #333;
     overflow-x: hidden;
 }
+
+body::-webkit-scrollbar {
+    width: 0;
+}
+
 .container {
     width: 800px;
     margin: 0 auto;
     padding: 20px;
 }
+
 header {
     background: #333;
     color: #fff;
     padding: 10px 0;
     text-align: center;
 }
+
 nav {
     margin-top: 20px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
+
 nav a {
     display: flex;
     text-decoration: none;
@@ -34,11 +42,12 @@ nav a {
     transition: background 0.3s;
     width: 150px;
     justify-content: center;
-
 }
+
 nav a:hover {
     background: #0056b3;
 }
+
 .content {
     margin-top: 20px;
     padding: 20px;
@@ -46,13 +55,13 @@ nav a:hover {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 .footer {
     text-align: center;
     padding: 10px;
     background: #333;
     color: #fff;
 }
-
 
 @media (max-width: 768px) {
     header {
